--- a/BrinquedoSeleciodado.html
+++ b/BrinquedoSeleciodado.html
@@ -41,9 +41,11 @@
 
 <body>
     <header class="bg-light p-3">
-        <div class="d-flex gap-5 align-items-center">
-            <img src="assets/img/Logo.png" alt="Logo Fábrica de Brinquedos" style="height: 7em;">
-            <h1 class="fw-bold fs-3">Fábrica de Brinquedos</h1>
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center">
+                <img src="assets/img/Logo.png" alt="Logo Fábrica de Brinquedos" style="height: 7em;">
+                <h1 class="fw-bold fs-3">Fábrica de Brinquedos</h1>
+            </div>
         </div>
     </header>
 
@@ -59,29 +61,32 @@
                 </div>
             </nav>
 
-            <main class="col-md-9 p-5" style="height: 84vh;">
-                <div class="d-flex align-items-center column-gap-3 mb-3" style="border-bottom: 1px solid black;">
-                    <h1>Cátalogo de Brinquedos - brinquedos para meninas - Kit cozinha</h1>
+            <main class="col-md-9 p-3">
+                <div class="d-flex align-items-center flex-wrap mb-3">
+                    <h1 class="flex-grow-1">Catálogo de Brinquedos - brinquedos para meninas - Kit cozinha</h1>
                 </div>
-                <section class="produtos flex-grow-1">
-                    <div class="d-flex justify-content-center gap-5">
-                        <img src="assets/img/Brinquedo7.png" alt="Kit Cozinha" style="height: 20em;">
-                        <div>
-                            <p>000007-A</p>
-                            <p class="fs-5 fw-bold">O kit de cozinha "Chef Mirim" é um brinquedo educativo que simula
-                                uma cozinha em miniatura, permitindo que crianças explorem sua criatividade e
+                <section class="produtos">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="assets/img/Brinquedo7.png" alt="Kit Cozinha" class="img-fluid mb-3">
+                        </div>
+                        <div class="col-md-6">
+                            <p class="fs-5 fw-bold">000007-A</p>
+                            <p class="fs-5 fw-bold">R$90,00</p>
+                            <p class="fs-5">O kit de cozinha "Chef Mirim" é um brinquedo educativo que simula uma
+                                cozinha em miniatura, permitindo que crianças explorem sua criatividade e
                                 desenvolvam habilidades culinárias enquanto brincam.</p>
-                            <p class="fs-4 fw-bold">R$90,00</p>
                         </div>
                     </div>
-                    <div class="mt-5 border p-4">
-                        <p>O kit de cozinha "Chef Mirim" é um brinquedo educativo que proporciona uma experiência
-                            divertida e interativa para crianças. Composto por miniaturas de utensílios de cozinha, como
-                            panelas, frigideiras, talheres e até mesmo alimentos de plástico, este brinquedo permite que
-                            as crianças explorem sua criatividade e desenvolvam habilidades culinárias enquanto brincam
-                            de cozinhar e servir refeições imaginárias para amigos e familiares. Com o kit "Chef Mirim",
-                            as crianças podem se aventurar no mundo da culinária, aprender sobre os ingredientes e os
-                            processos de preparo de alimentos de maneira lúdica e segura.</p>
+                    <div class="border p-3 mt-3">
+                        <p class="fs-5">O kit de cozinha "Chef Mirim" é um brinquedo educativo que proporciona uma
+                            experiência divertida e interativa para crianças. Composto por miniaturas de utensílios de
+                            cozinha, como panelas, frigideiras, talheres e até mesmo alimentos de plástico, este
+                            brinquedo permite que as crianças explorem sua criatividade e desenvolvam habilidades
+                            culinárias enquanto brincam de cozinhar e servir refeições imaginárias para amigos e
+                            familiares. Com o kit "Chef Mirim", as crianças podem se aventurar no mundo da culinária,
+                            aprender sobre os ingredientes e os processos de preparo de alimentos de maneira lúdica e
+                            segura.</p>
                     </div>
                 </section>
             </main>
