--- a/BrinquedoSeleciodado.html
+++ b/BrinquedoSeleciodado.html
@@ -41,11 +41,9 @@
 
 <body>
     <header class="bg-light p-3">
-        <div class="container">
-            <div class="d-flex justify-content-between align-items-center">
-                <img src="assets/img/Logo.png" alt="Logo Fábrica de Brinquedos" style="height: 7em;">
-                <h1 class="fw-bold fs-3">Fábrica de Brinquedos</h1>
-            </div>
+        <div class="d-flex gap-5 align-items-center">
+            <img src="assets/img/Logo.png" alt="Logo Fábrica de Brinquedos" style="height: 7em;">
+            <h1 class="fw-bold fs-3">Fábrica de Brinquedos</h1>
         </div>
     </header>
 
