--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <h1 class="mb-4">Brinquedos em destaque</h1>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
+                        <a href="BrinquedoSeleciodado.html">
                         <div class="card">
                             <img src="assets/img/Brinquedo1.png" class="card-img-top" alt="Pista HotWheels">
                             <div class="card-body">
@@ -51,8 +52,10 @@
                                 <p class="card-text text-center">R$200,00</p>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col">
+                        <a href="BrinquedoSeleciodado.html">
                         <div class="card">
                             <img src="assets/img/Brinquedo2.png" class="card-img-top" alt="Boneca Barbie">
                             <div class="card-body">
@@ -60,17 +63,21 @@
                                 <p class="card-text text-center">R$50,00</p>
                             </div>
                         </div>
+                    </a>
                     </div>
                     <div class="col">
+                        <a href="BrinquedoSeleciodado.html">
                         <div class="card">
-                            <img src="assets/img/Brinquedo3.png" class="card-img-top" alt="Amoeba">
+                            <img src="assets/img/Brinquedo7.png" class="card-img-top" alt="Kir Cozinha">
                             <div class="card-body">
-                                <h5 class="card-title text-center">Amoeba</h5>
-                                <p class="card-text text-center">R$10,00</p>
+                                <h5 class="card-title text-center">Kir Cozinha</h5>
+                                <p class="card-text text-center">R$90,00</p>
                             </div>
                         </div>
+                    </a>
                     </div>
                     <div class="col">
+                        <a href="BrinquedoSeleciodado.html">
                         <div class="card">
                             <img src="assets/img/Brinquedo4.png" class="card-img-top" alt="Boneco Fofão">
                             <div class="card-body">
@@ -78,8 +85,10 @@
                                 <p class="card-text text-center">R$150,00</p>
                             </div>
                         </div>
+                    </a>
                     </div>
                     <div class="col">
+                        <a href="BrinquedoSeleciodado.html">
                         <div class="card">
                             <img src="assets/img/Brinquedo5.png" class="card-img-top" alt="Fidget Spinner">
                             <div class="card-body">
@@ -87,8 +96,10 @@
                                 <p class="card-text text-center">R$2,50</p>
                             </div>
                         </div>
+                    </a>
                     </div>
                     <div class="col">
+                        <a href="BrinquedoSeleciodado.html">
                         <div class="card">
                             <img src="assets/img/Brinquedo6.png" class="card-img-top" alt="Omiranha Radical">
                             <div class="card-body">
@@ -96,6 +107,7 @@
                                 <p class="card-text text-center">R$60,00</p>
                             </div>
                         </div>
+                    </a>
                     </div>
                 </div>
             </main>
