--- a/Administracao.html
+++ b/Administracao.html
@@ -6,23 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fábrica de Brinquedos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Lobster&display=swap"
+        rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="shortcut icon" href="assets/img/Logo.png" type="image/x-icon">
     <style>
+        body {
+            font-family: "Asap Condensed", sans-serif;
+            background-color: #f8f9fa;
+        }
+
         .navbar-brand img {
-            height: 7em;
+            height: 5em;
         }
 
         .navbar-brand p {
-            font-size: 2em;
+            font-size: 1.5em;
             margin-bottom: 0;
         }
 
         .main-content {
-            padding: 50px;
+            padding: 20px;
         }
 
         .table-responsive {
@@ -30,38 +38,82 @@
             overflow-y: auto;
         }
 
-        .body {
-            font-family: "Asap Condensed", sans-serif;
+        header {
+            background-color: #ffc107;
+            color: #fff;
+            padding: 0.5em 0;
+            margin-bottom: 1em;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .header-title {
+            font-family: 'Lobster', sans-serif;
+        }
+
+        .nav-link {
+            color: #333;
+            transition: background-color 0.3s;
+        }
+
+        .nav-link:hover {
+            background-color: #e0a800;
+            color: #fff;
+        }
+
+        .btn-primary {
+            background-color: #ff6f61;
+            border-color: #ff6f61;
+        }
+
+        .btn-primary:hover {
+            background-color: #ff8a80;
+            border-color: #ff8a80;
+        }
+
+        .btn-danger {
+            background-color: #d32f2f;
+            border-color: #d32f2f;
+        }
+
+        .btn-danger:hover {
+            background-color: #f44336;
+            border-color: #f44336;
+        }
+
+        .modal-content {
+            border-radius: 8px;
+        }
+
+        .form-label {
+            font-weight: bold;
+        }
+
+        .table-striped tbody tr:nth-of-type(odd) {
+            background-color: rgba(255, 223, 186, 0.3);
+        }
+
+        .table-striped tbody tr:hover {
+            background-color: rgba(255, 223, 186, 0.5);
         }
     </style>
 </head>
 
 <body>
-    <header class="bg-primary-subtle p-3">
-        <div class="d-flex gap-5 align-items-center">
-            <img src="assets/img/Logo.png" alt="Logo Fábrica de Brinquedos" style="height: 7em;">
-            <h1 class="fw-bold fs-3 text-primary" style="font-family: 'Lobster', sans-serif;">Fábrica de Brinquedos</h1>
+    <header class="bg-primary-subtle p-2">
+        <div class="container d-flex gap-4 align-items-center">
+            <img src="assets/img/Logo.png" alt="Logo Fábrica de Brinquedos" style="height: 5em;">
+            <h1 class="header-title fw-bold fs-3 text-primary">Fábrica de Brinquedos</h1>
         </div>
     </header>
 
     <div class="container-fluid">
-        <div class="row">
-            <nav class="col-md-3 bg-primary-subtle p-0">
-                <p class="fw-bold fs-4 text-center py-3" style="font-family: 'Asap Condensed', sans-serif;">MENU PRINCIPAL</p>
-                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link" href="index.html">Home</a>
-                    <a class="nav-link" href="Catalogo.html">Catálogo de Brinquedos</a>
-                    <a class="nav-link active" href="Administracao.html">Administração</a>
-                    <a class="nav-link" href="SobreAEquipe.html">Sobre a equipe</a>
-                </div>
-            </nav>
-
-            <main class="col-md-9 main-content" style="height: 84vh;">
-                <h1 class="mb-4" style="font-family: 'Asap Condensed', sans-serif;">Catálogo de Brinquedos - Administração</h1>
+        <div>
+            <main class="col-md-10 mx-auto main-content">
+                <h1 class="mb-4">Administração de Brinquedos</h1>
                 <section class="produtos">
                     <div class="table-responsive">
-                        <table class="table table-striped table-bordered">
-                            <thead>
+                        <table class="table table-striped table-bordered shadow-sm">
+                            <thead class="bg-warning text-white">
                                 <tr>
                                     <th>Descrição</th>
                                     <th>Categoria</th>
@@ -117,7 +169,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Editar Brinquedo {{ nome do brinquedo }}</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Editar Brinquedo</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -169,7 +221,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-danger">Salvar dados</button>
+                    <button type="button" class="btn btn-primary">Salvar dados</button>
                 </div>
             </div>
         </div>
@@ -232,7 +284,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-danger">Salvar dados</button>
+                    <button type="button" class="btn btn-primary">Salvar dados</button>
                 </div>
             </div>
         </div>
