--- a/BrinquedoSeleciodado.html
+++ b/BrinquedoSeleciodado.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fábrica de Brinquedos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lobster&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="shortcut icon" href="assets/img/Logo.png" type="image/x-icon">
     <style>
         /* Estilo personalizado */
         .card {
@@ -53,12 +56,13 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="col-md-3 bg-primary-subtle p-0">
-                <p class="fw-bold fs-4 text-center py-3" style="font-family: 'Asap Condensed', sans-serif;">MENU PRINCIPAL</p>
+                <p class="fw-bold fs-4 text-center py-3" style="font-family: 'Asap Condensed', sans-serif;">MENU
+                    PRINCIPAL</p>
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <a class="nav-link" href="index.html">Home</a>
                     <a class="nav-link active" href="Catalogo.html">Catálogo de Brinquedos</a>
-                    <a class="nav-link" href="Administracao.html">Administração</a>
                     <a class="nav-link" href="SobreAEquipe.html">Sobre a equipe</a>
+                    <a class="nav-link" href="Login.html">Entrar como Adiministrador</a>
                 </div>
             </nav>
 
